data/derived/comb/progs/unify/prog7909.ml.out
Characters 85-98:
  | hd::tl -> [cout(hd, i)] + mulByDigit i tl in
              ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
